include/mat.hpp

size_t cv_Mat_get_Step(Mat* self);
MatExpr* cv_Mat_sub(Mat* m1, Mat* m2);
MatExpr* cv_abs(Mat* m);
size_t cv_Mat_total(Mat* self);
MatExpr* cv_Mat_inv_mat(Mat* self, int method);