include/opencv_generated.hpp

using namespace cv;
void cv_absdiff(Mat* src1, Mat* src2, Mat* dst);
void cv_bitwise_and(Mat* src1, Mat* src2, Mat* dst, Mat* mask);
void cv_bitwise_not(Mat* src, Mat* dst, Mat* mask);
void cv_bitwise_or(Mat* src1, Mat* src2, Mat* dst, Mat* mask);
void cv_bitwise_xor(Mat* src1, Mat* src2, Mat* dst, Mat* mask);
void cv_convertScaleAbs(Mat* src, Mat* dst, double alpha, double beta);
double cv_determinant(Mat* mtx);
void cv_divide(Mat* src1, Mat* src2, Mat* dst, double scale, int dtype);
void cv_divide4(double scale, Mat* src2, Mat* dst, int dtype);
void cv_exp(Mat* src, Mat* dst);
void cv_flip(Mat* src, Mat* dst, int flipCode);
double cv_invert(Mat* src, Mat* dst, int flags);
void cv_log(Mat* src, Mat* dst);
void cv_max(Mat* src1, Mat* src2, Mat* dst);
Scalar* cv_mean(Mat* src, Mat* mask);
void cv_min(Mat* src1, Mat* src2, Mat* dst);
void cv_minMaxLoc(Mat* src, double* minVal, double* maxVal, Point* minLoc, Point* maxLoc, Mat* mask);
void cv_multiply(Mat* src1, Mat* src2, Mat* dst, double scale, int dtype);
void cv_normalize(Mat* src, Mat* dst, double alpha, double beta, int norm_type, int dtype, Mat* mask);
void cv_pow(Mat* src, double power, Mat* dst);
void cv_scaleAdd(Mat* src1, double alpha, Mat* src2, Mat* dst);
void cv_subtract(Mat* src1, Mat* src2, Mat* dst, Mat* mask, int dtype);
Scalar* cv_sum(Mat* src);