include/extra_functions.hpp

TermCriteria* cv_create_TermCriteria();
TermCriteria* cv_create_TermCriteria3(int type, int maxCount, double epsilon);
RNG* cv_create_RNG();
RNG* cv_create_RNG_state(uint64 state);
Size2f* cv_create_Size2f();
float cv_Size2f_width(Size2f* self);